# cortex-memory

./: .gitignore  LICENSE  PLAN.md  README.md  cli.py  config.yaml  pyproject.toml  requirements.txt  seed_entities.yaml.example  service.py  setup.py
context/: analyze.py  prepare.py
cortex_memory/: __init__.py  cli.py  config.py  service.py
cortex_memory/context/: analyze.py  prepare.py
cortex_memory/db/: schema.sql  store.py
cortex_memory/pipeline/: consolidate.py  entities.py  ingest.py
cortex_memory/vector/: embeddings.py
db/: schema.sql  store.py
pipeline/: consolidate.py  entities.py  ingest.py
vector/: embeddings.py
